// Vitest Snapshot v1

exports[`Button > Button baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <t-button
    theme="default"
    variant="base"
  >
     填充按钮 
  </t-button>
  <t-button
    theme="default"
    variant="outline"
  >
     描边按钮 
  </t-button>
  <t-button
    theme="default"
    variant="dashed"
  >
     虚框按钮 
  </t-button>
  <t-button
    theme="default"
    variant="text"
  >
     文字按钮 
  </t-button>
</div>
`;

exports[`Button > Button blockVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
  style="justify-content: center;"
>
  <div
    class="tdesign-demo-block-column"
    style="min-width: 320px; max-width: 640px;"
  >
    <t-button
      block=""
      theme="primary"
      variant="base"
    >
       填充按钮 
    </t-button>
    <t-button
      block=""
      variant="outline"
    >
       描边按钮 
    </t-button>
    <t-button
      block=""
      variant="dashed"
    >
       虚框按钮 
    </t-button>
    <t-button
      block=""
      variant="text"
    >
       文字按钮 
    </t-button>
  </div>
</div>
`;

exports[`Button > Button ghostVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      ghost=""
      variant="outline"
    >
       幽灵按钮 
    </t-button>
    <t-button
      ghost=""
      variant="dashed"
    >
       幽灵按钮 
    </t-button>
    <t-button
      ghost=""
      variant="text"
    >
       幽灵按钮 
    </t-button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      ghost=""
      theme="primary"
      variant="outline"
    >
       幽灵按钮 
    </t-button>
    <t-button
      ghost=""
      theme="primary"
      variant="dashed"
    >
       幽灵按钮 
    </t-button>
    <t-button
      ghost=""
      theme="primary"
      variant="text"
    >
       幽灵按钮 
    </t-button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      ghost=""
      theme="success"
      variant="outline"
    >
       幽灵按钮 
    </t-button>
    <t-button
      ghost=""
      theme="success"
      variant="dashed"
    >
       幽灵按钮 
    </t-button>
    <t-button
      ghost=""
      theme="success"
      variant="text"
    >
       幽灵按钮 
    </t-button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      ghost=""
      theme="warning"
      variant="outline"
    >
       幽灵按钮 
    </t-button>
    <t-button
      ghost=""
      theme="warning"
      variant="dashed"
    >
       幽灵按钮 
    </t-button>
    <t-button
      ghost=""
      theme="warning"
      variant="text"
    >
       幽灵按钮 
    </t-button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      ghost=""
      theme="danger"
      variant="outline"
    >
       幽灵按钮 
    </t-button>
    <t-button
      ghost=""
      theme="danger"
      variant="dashed"
    >
       幽灵按钮 
    </t-button>
    <t-button
      ghost=""
      theme="danger"
      variant="text"
    >
       幽灵按钮 
    </t-button>
  </div>
</div>
`;

exports[`Button > Button groupVue demo works fine 1`] = `
<div
  class="demo-button-row"
  data-v-2b27e22b=""
>
  <div
    class="demo-button-col"
    data-v-2b27e22b=""
  >
    <t-button
      data-v-2b27e22b=""
      theme="primary"
    >
       确定 
    </t-button>
    <t-button
      data-v-2b27e22b=""
      variant="outline"
    >
       取消 
    </t-button>
  </div>
  <div
    class="demo-button-col"
    data-v-2b27e22b=""
  >
    <t-button
      data-v-2b27e22b=""
      theme="primary"
    >
       下一步 
    </t-button>
    <t-button
      data-v-2b27e22b=""
      variant="outline"
    >
       上一步 
    </t-button>
  </div>
  <div
    class="demo-button-col"
    data-v-2b27e22b=""
  >
    <t-button
      data-v-2b27e22b=""
      theme="primary"
    >
       新建主机 
    </t-button>
    <t-button
      data-v-2b27e22b=""
      variant="outline"
    >
       重装系统 
    </t-button>
    <t-button
      data-v-2b27e22b=""
      variant="outline"
    >
       批量续费 
    </t-button>
    <t-button
      data-v-2b27e22b=""
      variant="outline"
    />
  </div>
</div>
`;

exports[`Button > Button iconVue demo works fine 1`] = `
<div
  class="demo-button-icon"
  data-v-6cd7177d=""
>
  <div
    class="demo-button-row"
    data-v-6cd7177d=""
  >
    <div
      class="demo-button-col"
      data-v-6cd7177d=""
    >
      <t-button
        data-v-6cd7177d=""
        theme="primary"
      >
         新建 
      </t-button>
      <t-button
        data-v-6cd7177d=""
        variant="outline"
      >
         上传文件 
      </t-button>
    </div>
    <div
      class="demo-button-col"
      data-v-6cd7177d=""
    >
      <t-button
        data-v-6cd7177d=""
        shape="circle"
        theme="primary"
      />
      <t-button
        data-v-6cd7177d=""
        shape="circle"
        theme="primary"
      />
    </div>
    <!-- 使用 function 的形式定义 icon -->
    <div
      class="demo-button-col"
      data-v-6cd7177d=""
    >
      <t-button
        data-v-6cd7177d=""
        icon="() => {
      return __vite_ssr_import_0__.createVNode(__vite_ssr_import_1__.SearchIcon, null, null);
    }"
        variant="outline"
      >
         Function Icon 
      </t-button>
    </div>
  </div>
</div>
`;

exports[`Button > Button loadingVue demo works fine 1`] = `
<div
  class="button-base"
>
  <t-button
    loading=""
  >
     主按钮 
  </t-button>
  <t-button
    loading=""
    variant="outline"
  >
     次按钮 
  </t-button>
</div>
`;

exports[`Button > Button shapeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <t-button
        shape="rectangle"
        theme="primary"
        variant="base"
      >
         填充按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        shape="square"
        theme="primary"
        variant="base"
      />
    </div>
    <div
      class="item"
    >
      <t-button
        shape="round"
        theme="primary"
        variant="base"
      >
         填充按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        shape="circle"
        theme="primary"
        variant="base"
      />
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <t-button
        shape="rectangle"
        variant="outline"
      >
         描边按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        shape="square"
        variant="outline"
      />
    </div>
    <div
      class="item"
    >
      <t-button
        shape="round"
        variant="outline"
      >
         描边按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        shape="circle"
        variant="outline"
      />
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <t-button
        shape="rectangle"
        variant="dashed"
      >
         虚框按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        shape="square"
        variant="dashed"
      />
    </div>
    <div
      class="item"
    >
      <t-button
        shape="round"
        variant="dashed"
      >
         虚框按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        shape="circle"
        variant="dashed"
      />
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <t-button
        shape="rectangle"
        variant="text"
      >
         文字按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        shape="square"
        variant="text"
      />
    </div>
    <div
      class="item"
    >
      <t-button
        shape="round"
        variant="text"
      >
         文字按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        shape="circle"
        variant="text"
      />
    </div>
  </div>
</div>
`;

exports[`Button > Button sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <t-button
        size="small"
        theme="primary"
        variant="base"
      >
         填充按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        size="small"
        variant="outline"
      >
         描边按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        size="small"
        variant="dashed"
      >
         虚框按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        size="small"
        variant="text"
      >
         文字按钮 
      </t-button>
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <t-button
        size="medium"
        theme="primary"
        variant="base"
      >
         填充按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        size="medium"
        variant="outline"
      >
         描边按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        size="medium"
        variant="dashed"
      >
         虚框按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        size="medium"
        variant="text"
      >
         文字按钮 
      </t-button>
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <t-button
        size="large"
        theme="primary"
        variant="base"
      >
         填充按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        size="large"
        variant="outline"
      >
         描边按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        size="large"
        variant="dashed"
      >
         虚框按钮 
      </t-button>
    </div>
    <div
      class="item"
    >
      <t-button
        size="large"
        variant="text"
      >
         文字按钮 
      </t-button>
    </div>
  </div>
</div>
`;

exports[`Button > Button statusVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <t-button
    disabled=""
  >
     填充按钮 
  </t-button>
  <t-button
    loading=""
  >
     加载中 
  </t-button>
</div>
`;

exports[`Button > Button themeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      theme="default"
    >
       填充按钮 
    </t-button>
    <t-button
      theme="default"
      variant="outline"
    >
       描边按钮 
    </t-button>
    <t-button
      theme="default"
      variant="dashed"
    >
       虚框按钮 
    </t-button>
    <t-button
      theme="default"
      variant="text"
    >
       文字按钮 
    </t-button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      theme="primary"
    >
       填充按钮 
    </t-button>
    <t-button
      theme="primary"
      variant="outline"
    >
       描边按钮 
    </t-button>
    <t-button
      theme="primary"
      variant="dashed"
    >
       虚框按钮 
    </t-button>
    <t-button
      theme="primary"
      variant="text"
    >
       文字按钮 
    </t-button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      theme="danger"
    >
       填充按钮 
    </t-button>
    <t-button
      theme="danger"
      variant="outline"
    >
       描边按钮 
    </t-button>
    <t-button
      theme="danger"
      variant="dashed"
    >
       虚框按钮 
    </t-button>
    <t-button
      theme="danger"
      variant="text"
    >
       文字按钮 
    </t-button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      theme="warning"
    >
       填充按钮 
    </t-button>
    <t-button
      theme="warning"
      variant="outline"
    >
       描边按钮 
    </t-button>
    <t-button
      theme="warning"
      variant="dashed"
    >
       虚框按钮 
    </t-button>
    <t-button
      theme="warning"
      variant="text"
    >
       文字按钮 
    </t-button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-button
      theme="success"
    >
       填充按钮 
    </t-button>
    <t-button
      theme="success"
      variant="outline"
    >
       描边按钮 
    </t-button>
    <t-button
      theme="success"
      variant="dashed"
    >
       虚框按钮 
    </t-button>
    <t-button
      theme="success"
      variant="text"
    >
       文字按钮 
    </t-button>
  </div>
</div>
`;
